--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>My Simple web</title>
 </head>
 <body>
-    <p>My Name is Nahian</p>
+    <p>My Name is Nahian. I read in CSE</p>
 </body>
 </html>
